--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.3",
+    "date-ms": "^0.0.5",
     "popper.js": "1.16.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
